Começo da página about me

--- a/index.html
+++ b/index.html
@@ -59,13 +59,32 @@
       <i class="fa fa-code" aria-hidden="true"></i>
     </div>
     <div class="citacao">
-      <p class="frase">Programming is like kicking yourself in the face, sooner or later your nose will bleed.</p>
+      <p class="frase">"Programming is like kicking yourself in the face, sooner or later your nose will bleed."</p>
       <p>Kyle Woodbury</p>
     </div>
   </div>
 
-  <div class="container-fluid bg2">
-
+  <div class="container-fluid bg2 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="imagens/max.jpg" alt="Max Santos" class="img-responsive img-circle">
+        </div>
+        <div class="col-md-7">
+          <p>
+            You will learn more about my programming habilities below, so here I'll
+            talk about who I am.
+            I'm 19 and live in Brazil, more specifically at Rio de Janeiro. I
+            <br><br>
+            What about me? Well, I'm a student of Information systems. Also I'm a
+            technology lover and a programmer on my free time. Actually, programming
+            is a part of me, it's what I do to relax (and also what makes me nervous).
+            I have as hobbie playing videogames, especially the strategy ones.
+            Sorry about any mistakes, I'm also an English learner.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
